Handling "InternalError" when following leader